standard.css
* {
	box-sizing:border-box;
	margin: 0;
	padding: 0;
	font-size: inherit;
}

html {
	font-size:20px;
}

#header, #asm-input, #console, processor-state, #controls {
	position:absolute;
	overflow-y: auto;
}

#header {
	top:0;
	height:2.5em;
	left:0;
	right:20%;
	line-height: 2.5em;
	font-size: 2em;
	text-align:center;
	background-color:#00005e;
	color:white;
}

#asm-input {
	top:5em;
	bottom:5em;
	left:0;
	width:80%;
}

#asm-input textarea, #asm-input .CodeMirror {
	border:none;
	width:100%;
	height:calc(100% - 2em);
	/*font-size:inherit;*/
	display:block;
}

.CodeMirror.read-only {
	background-color: #ddd;
}

.breakpoints {
	width: 0.8em;
}

.gutter-highlight {
	background-color:#ddf;
}

#assembleSubmit {
	width:100%;
	font-size: 0.8em;
	height:2.5em;
	line-height: 2.5em;
	display:block;
}

#console {
	height:5em;
	bottom:0;
	left:0;
	width:80%;
	background-color:black;
	color:white;
	font-family:monospace;
}

@keyframes cursorblink {
	0% {
		background-color:black;
	}
	50% {
		background-color:white;
	}
	100% {
		background-color:white;
	}
}

#console .cursor {
	animation: cursorblink 1s steps(1) infinite;
	animation-play-state: running;
}

processor-state {
	background-color:#dedeff;
	top:0em;
	bottom:0em;
	width:20%;
	right:0;
}

.register-table {
	width:95%;
	margin:auto;
	border-collapse: collapse;
}

.register-table td {
	padding: 0.3em 0;
	text-align: center;
}

.register-table#registers td:nth-child(1) {
	padding-left: 5px;
	padding-right: 5px;
	font-weight:bold;
	font-size:1em;
	line-height: 1.25em;
}

.register-table#registers td:nth-child(2) {
	padding-right: 5px;
}

.register-table#registers td:nth-child(2) > * {
	display:block;
	width:100%;
	min-width: 1.25em;
	height:1.25em;
}

.register-table#flags td {
	padding-left: 5px;
	/*padding-right: 5px;*/
	font-weight: bold;
	font-size: 1em;
	line-height: 1.25em;
}
.register-table#flags td > * {
	display: block;
	width: 100%;
	min-width: 1.25em;
	height: 1.25em;
}

.register-table tr:nth-child(odd) {
	background-color:rgba(50, 50, 255, 0.8);
}
.register-table tr:nth-child(even) {
	background-color:rgba(150, 150, 255, 0.8);
}

.register-table input {
	background-color: rgba(255, 255, 255, 0.7);
	font-size:1em;
	line-height:1.25em;
	border:none;
}

#controls {
	height:2em;
	bottom:0;
	width:100%;
	right:0;
}

#controlContainer {
	display:flex;
	height:2em;
}

.controls-overlay {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	font-size: 0.8em;
	line-height: 1.2em;
	background-color: #dedeff;
	opacity: 0.5;
}

#fileInteraction{
	width:30%;
}
#fileInteractionContainer {
	width:100%;
	height:100%;
	display:flex;
	flex-direction:row;
}
#fileInteractionContainer > * {
	flex: 1 1 auto;
}
#saveFile {
	width: 100%;
}
input#button{
  height: 0px; 
  width: 100%;
}
input#button:before {
  content: 'Browse';
  background: #FFF;
  width: 100%;
  height: 2em;
  display: block;
  text-align: center;
  position: relative;
  margin: 0;
  margin: 0 5px;
  left: -6px;
  border: 1px solid #E0E0E0;
  top: -1px;
  line-height: 2em;
  color: #B6B6B6;
  padding-left: 5px;
  display: block;
}

#assembleContainer {
	width:40%;
}

#controls {
	width:30%;
}

#controls-flex {
	width:100%;
	height:100%;
	display: flex;
	flex-direction: row;
}

#controls-flex > * {
	flex: 1 1 auto;
}

h2 {
	font-weight: bolder;
	font-size:1.8em;
	margin-left:0.8em;
	margin-bottom: 0.3em;
	margin-top: 0.8em;
}

#abortModal {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	text-align: center;
	background-color: white;
	opacity: 0.5;
	z-index: 1000;
}

#abortModal > * {
	position: absolute;
	top: calc(50% - 0.5em);
	left: 0;
	right: 0;
	text-align: center;
}

.display-none {
	display:none;
}

